{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 35,
  "lineage": "7fd60888-24ea-9370-66df-5389641090cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053c29235e425ceb8",
            "arn": "arn:aws:ec2:us-east-1:438465169137:elastic-ip/eipalloc-053c29235e425ceb8",
            "association_id": "eipassoc-08da4600e151451ba",
            "domain": "vpc",
            "id": "eipalloc-053c29235e425ceb8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e68e0d1fb4c6597f",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-44-194-135-32.compute-1.amazonaws.com",
            "public_ip": "44.194.135.32",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e641f7d527f165af",
            "arn": "arn:aws:ec2:us-east-1:438465169137:instance/i-0563a0c06198c9441",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0563a0c06198c9441",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sana_project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e9de54e37a061ae",
            "private_dns": "ip-10-0-2-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.151",
            "public_dns": "ec2-3-84-95-129.compute-1.amazonaws.com",
            "public_ip": "3.84.95.129",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02662da60cfc86c13",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bd94509044d8a5e",
            "tags": {
              "Name": "backend server"
            },
            "tags_all": {
              "Name": "backend server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d402e6f73d665c0b"
            ]
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_subnet.sana_private_subnet",
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e641f7d527f165af",
            "arn": "arn:aws:ec2:us-east-1:438465169137:instance/i-03ba730dcf520b5a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ba730dcf520b5a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sana_project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049430bffaad226c1",
            "private_dns": "ip-10-0-1-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-54-91-252-62.compute-1.amazonaws.com",
            "public_ip": "54.91.252.62",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e9cb966b131fc0ac",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a565ed57f42e789a",
            "tags": {
              "Name": "frontend server"
            },
            "tags_all": {
              "Name": "frontend server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0593d203eb10a81e8",
              "sg-0d009d68a0f552142"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.sana_public_subnet",
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "postgres_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e641f7d527f165af",
            "arn": "arn:aws:ec2:us-east-1:438465169137:instance/i-064b7745a44255df6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064b7745a44255df6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sana_project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0511d16cefa134bcc",
            "private_dns": "ip-10-0-2-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.85",
            "public_dns": "ec2-3-84-134-98.compute-1.amazonaws.com",
            "public_ip": "3.84.134.98",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a5a6709f8c343fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bd94509044d8a5e",
            "tags": {
              "Name": "postgres server"
            },
            "tags_all": {
              "Name": "postgres server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e77f64782b41e567"
            ]
          },
          "dependencies": [
            "aws_security_group.postgres_sg",
            "aws_subnet.sana_private_subnet",
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sana_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:internet-gateway/igw-078e72840ac6bbf89",
            "id": "igw-078e72840ac6bbf89",
            "owner_id": "438465169137",
            "region": "us-east-1",
            "tags": {
              "Name": "SanaInternetGateway"
            },
            "tags_all": {
              "Name": "SanaInternetGateway"
            },
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "dependencies": [
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053c29235e425ceb8",
            "association_id": "eipassoc-08da4600e151451ba",
            "connectivity_type": "public",
            "id": "nat-05ad7556f4ade7aef",
            "network_interface_id": "eni-0e68e0d1fb4c6597f",
            "private_ip": "10.0.1.70",
            "public_ip": "44.194.135.32",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a565ed57f42e789a",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.sana_igw",
            "aws_subnet.sana_public_subnet",
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sana_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:route-table/rtb-0476b70dc90ed2016",
            "id": "rtb-0476b70dc90ed2016",
            "owner_id": "438465169137",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05ad7556f4ade7aef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.sana_igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.sana_public_subnet",
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sana_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:route-table/rtb-03d5e59dbc21da55f",
            "id": "rtb-03d5e59dbc21da55f",
            "owner_id": "438465169137",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078e72840ac6bbf89",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sana_igw",
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sana_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc5752cc9b52eed0",
            "region": "us-east-1",
            "route_table_id": "rtb-0476b70dc90ed2016",
            "subnet_id": "subnet-05bd94509044d8a5e"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.sana_igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.sana_private_rt",
            "aws_subnet.sana_private_subnet",
            "aws_subnet.sana_public_subnet",
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sana_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e587f8455592830",
            "region": "us-east-1",
            "route_table_id": "rtb-03d5e59dbc21da55f",
            "subnet_id": "subnet-0a565ed57f42e789a"
          },
          "dependencies": [
            "aws_internet_gateway.sana_igw",
            "aws_route_table.sana_public_rt",
            "aws_subnet.sana_public_subnet",
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:security-group/sg-0d402e6f73d665c0b",
            "description": "Allowing incoming from Frontend and outbound to Postgres",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d402e6f73d665c0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing incoming HTTP from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing incoming HTTPS from the Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "BackendSecurityGroup",
            "name_prefix": "",
            "owner_id": "438465169137",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BackendSecurityGroup"
            },
            "tags_all": {
              "Name": "BackendSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:security-group/sg-0593d203eb10a81e8",
            "description": "Allow SSH only from my laptop",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0593d203eb10a81e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.91.210.84/32"
                ],
                "description": "SSH from my laptop",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "438465169137",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BastionSSHAccess"
            },
            "tags_all": {
              "Name": "BastionSSHAccess"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:security-group/sg-0d009d68a0f552142",
            "description": "Allowing incoming HTTP and HTTPS from the Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d009d68a0f552142",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing incoming HTTP from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing incoming HTTPS from the Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "FrontendSecurityGroup",
            "name_prefix": "",
            "owner_id": "438465169137",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FrontendSecurityGroup"
            },
            "tags_all": {
              "Name": "FrontendSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:security-group/sg-0e77f64782b41e567",
            "description": "Allowing incoming from Frontend and outbound to Postgres",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e77f64782b41e567",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing incoming HTTP from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing incoming HTTPS from the Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "PostgresSecurityGroup",
            "name_prefix": "",
            "owner_id": "438465169137",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PostgresSecurityGroup"
            },
            "tags_all": {
              "Name": "PostgresSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sana_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:subnet/subnet-05bd94509044d8a5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bd94509044d8a5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465169137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "SanaPrivateSubnet"
            },
            "tags_all": {
              "Name": "SanaPrivateSubnet"
            },
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "dependencies": [
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sana_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:subnet/subnet-0a565ed57f42e789a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a565ed57f42e789a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465169137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "SanaPublicSubnet"
            },
            "tags_all": {
              "Name": "SanaPublicSubnet"
            },
            "vpc_id": "vpc-05a3fc6f3e34987d2"
          },
          "dependencies": [
            "aws_vpc.sana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sana_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465169137:vpc/vpc-05a3fc6f3e34987d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d6a1f3137f48d47",
            "default_route_table_id": "rtb-031781eba823861d5",
            "default_security_group_id": "sg-0e3c88fe835c1c3ed",
            "dhcp_options_id": "dopt-08475b12474361498",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a3fc6f3e34987d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031781eba823861d5",
            "owner_id": "438465169137",
            "region": "us-east-1",
            "tags": {
              "Name": "SanaVPC"
            },
            "tags_all": {
              "Name": "SanaVPC"
            }
          }
        }
      ]
    }
  ]
}